fix up webpage dark mode

--- a/TOTL22/css/styles.css
+++ b/TOTL22/css/styles.css
@@ -79,6 +79,7 @@
   --menuLink: var(--mdGrey);
   --menuBG: var(--dkGrey);
   --imageFilter: grayscale(1) contrast(0.7) brightness(1.3);
+  --webMenu: rgba(40, 40, 40, 0.95);
   --accentColor: var(--black);
   --accent: rgba(87, 188, 210, 1);
   --ltaccent: rgba(87, 188, 210, 1);
@@ -277,6 +278,7 @@
   --menuLink: var(--mdGrey);
   --menuBG: var(--dkGrey);
   --imageFilter: grayscale(1) brightness(0.7) contrast(1.3);
+  --webMenu: rgba(26, 26, 26, 0.7);
   --accentColor: var(--black);
   --accent: rgba(87, 188, 210, 1);
   --ltaccent: rgba(87, 188, 210, 1);
@@ -2043,11 +2045,11 @@ body:not(#idx):not(#Profile) header .header p, body:not(#idx):not(#Profile) .hea
   }
 }
 .webpage--main-menu {
-  background: rgba(40, 40, 40, 0.95);
+  background: var(--webMenu);
   border-left: 1px solid var(--light);
 }
 .webpage--main-menu.scrolled {
-  border-left-color: rgba(40, 40, 40, 0.95);
+  border-left-color: var(--webMenu);
 }
 .webpage--main-menu a {
   background: var(--dkGrey);
@@ -2125,6 +2127,7 @@ body:not(#idx):not(#Profile) header .header p, body:not(#idx):not(#Profile) .hea
   text-transform: lowercase;
   font-family: var(--headerFont);
   margin: 0 10px 0 0;
+  color: var(--accentColor);
 }
 .webpage--pop-menu-links button:not(:last-child),
 .webpage--pop-menu-links a:not(:last-child), .webpage--sub-menu-links button:not(:last-child),
